--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,26 @@
-img {
-    width: 50%;
- }
- .card-container{
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-gap: 10%;
-    grid-column-gap: 10%;
- 
- 
- }
- 
+#title{
+    text-align: center;
+    height: 100px;
+    background-image: linear-gradient(to right, #7d141d, #ff1e27 );
+
+
+
+}
+#title h1{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+}
+.tile:hover{
+    cursor: pointer;
+}
+.tile{
+display: flex;
+
+}
+img{
+    width: 20%;
+}
+
  
  .hiding{
     filter: brightness(0%);
