--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0%;
+}
+
 #title{
     text-align: center;
     height: 100px;
@@ -8,17 +12,29 @@
 }
 #title h1{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 4em;
 
 }
-.tile:hover{
-    cursor: pointer;
+
+
+.card-container{
+    height: 400px;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-gap: 10%;
+    grid-column-gap: 10%;
+    margin-top: 1.5em;
 }
-.tile{
+/* .tile:hover{
+    cursor: pointer;
+} */
+/* .tile{
 display: flex;
 
-}
+} */
 img{
-    width: 20%;
+    width: 100%;
+    height: auto;
 }
 
  
@@ -36,10 +52,10 @@ img{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(100, 96, 96);
+    background-image: linear-gradient(to right, #7d141d, #ff1e27 );
     color: aqua;
     font-size: 4em;
     font-weight: 700;
-    margin-top: 50px;
+    margin-top: 70%;
  }
  
