--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,9 @@
     text-align: center;
     height: 100px;
     background-image: linear-gradient(to right, #7d141d, #ff1e27 );
+    font-size: 20px;
+    text-decoration: underline;
+    /* text-decoration-color: aqua; */
 
 
 
@@ -16,15 +19,29 @@
 
 }
 
-
 .card-container{
+    height: 300px;
+    display: grid;
+    gap: 10px;
+    background-color: aquamarine;
+    padding: 10px;
+    grid-template-columns: auto auto auto auto;
+}
+
+.card{
+    width: 100px;
+    height: 100px;
+
+}
+
+/* .card-container{
     height: 400px;
     display: grid;
     grid-template-columns: repeat(4,1fr);
     grid-gap: 10%;
     grid-column-gap: 10%;
     margin-top: 1.5em;
-}
+} */
 /* .tile:hover{
     cursor: pointer;
 } */
@@ -32,10 +49,10 @@
 display: flex;
 
 } */
-img{
+/* img{
     width: 100%;
     height: auto;
-}
+} */
 
  
  .hiding{
