--- a/styles.css
+++ b/styles.css
@@ -23,16 +23,28 @@
     height: 300px;
     display: grid;
     gap: 10px;
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
     padding: 10px;
     grid-template-columns: auto auto auto auto;
+    width: 80%;
 }
 
 .card{
-    width: 100px;
-    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to right, #7d141d, #ff1e27 );
+    box-shadow: 5px 10px gray;border-radius: 5px;
+
 
 }
+.card img{
+    max-width: 100%;
+    max-height: 100%;
+}
+
 
 /* .card-container{
     height: 400px;
@@ -73,6 +85,6 @@ display: flex;
     color: aqua;
     font-size: 4em;
     font-weight: 700;
-    margin-top: 70%;
+    /* margin-top: 70%; */
  }
  
