--- a/styles.css
+++ b/styles.css
@@ -36,13 +36,21 @@
     width: 100%;
     height: 100%;
     background-image: linear-gradient(to right, #7d141d, #ff1e27 );
-    box-shadow: 5px 10px gray;border-radius: 5px;
+    box-shadow: 5px 5px rgb(247, 163, 163);border-radius: 5px;
 
 
 }
+
+
+
 .card img{
     max-width: 100%;
     max-height: 100%;
+}
+
+.card:hover{
+    cursor: pointer;
+
 }
 
 
