--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 *{
     margin: 0%;
 }
@@ -27,8 +28,20 @@
     padding: 10px;
     grid-template-columns: auto auto auto auto;
     width: 80%;
+    margin-left: 10%;
+}
+@media (max-width: 768px){
+    .card-container{
+        grid-template-columns: auto auto auto auto;
+
+    }
 }
 
+@media(max-width: 480px){
+    #title h1{
+        font-size: 3em;
+    }
+}
 .card{
     display: flex;
     justify-content: center;
@@ -95,4 +108,6 @@ display: flex;
     font-weight: 700;
     /* margin-top: 70%; */
  }
+ 
+ 
  
