adjusting positin of moves

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
+
 *{
     margin: 0%;
+}
+body{
+    background-image: linear-gradient(to right, #7d141d, #ff1e27 );
+
 }
 
 #title{
@@ -23,12 +28,25 @@
     height: 300px;
     display: grid;
     gap: 10px;
-    /* background-color: aquamarine; */
+    background-color: rgb(190, 59, 59);
     padding: 10px;
     grid-template-columns: auto auto auto auto;
     width: 80%;
+    margin-left: 10%;
+
+}
+@media (max-width: 768px){
+    .card-container{
+        grid-template-columns: auto auto auto auto;
+
+    }
 }
 
+@media(max-width: 480px){
+    #title h1{
+        font-size: 3em;
+    }
+}
 .card{
     display: flex;
     justify-content: center;
@@ -95,4 +113,6 @@ display: flex;
     font-weight: 700;
     /* margin-top: 70%; */
  }
+ 
+ 
  
