--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     margin: 0%;
 }
 body{
-        background-image: linear-gradient(to right, #7d141d, #ff1e27 );
+    background-image: linear-gradient(to right, #7d141d, #ff1e27 );
 
 }
 
@@ -113,6 +113,23 @@ display: flex;
     font-weight: 700;
     /* margin-top: 70%; */
  }
- 
+ #time{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(to right, #7d141d, #ff1e27 );
+    color: aqua;
+    font-size: 4em;
+    font-weight: 700
+ }
+ #stars{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(to right, #7d141d, #ff1e27 );
+    color: aqua;
+    font-size: 4em;
+    font-weight: 700
+ }
  
  
