--- a/styles.css
+++ b/styles.css
@@ -134,11 +134,16 @@ display: flex;
  
  button{
     display: flex;
-    margin-left: 48%;
+    margin-left: 10%;
+    margin-top: 10px;
+    margin-bottom: 10px;
     background-image: linear-gradient(to right, #7d141d, #ff1e27 );
     border:none;
     padding:10px 20px;
     border-radius:5px;
     font-weight: bold;
     font-size: 30px;
+ }
+ button:hover{
+    cursor: pointer;
  }
